# fast-des

./: Cargo.toml  README.md
.github/workflows/: semver.yml
chores/: semver.py
src/: benchmark.rs  constants.rs  des.rs  des_optimized.rs  lib.rs  main.rs  sbox_optimized.rs  sbox_simd.rs  utils.rs
src/sboxes/: mod.rs  sbox_avx2.rs  sbox_avx512.rs
